--- a/Styles.css
+++ b/Styles.css
@@ -6,7 +6,7 @@ body {
   .parallax-image {
     width: 100%;
     height: 100vh;
-    background-image: url('/priyanka/img/bg4.jpg');
+    background-image: url('/p1/img/bg4.jpg');
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
